study_an operator

--- a/conditional .html
+++ b/conditional .html
@@ -23,7 +23,10 @@
         // }
         // else { alert('아이디 틀림') };
 
+
         // // 조건문 + AND 논리 연산자
+        //  논리연산자 AND : && 사용
+
 
         // let id = prompt("id 입력");
         // let pw = prompt("pw 입력");
@@ -33,7 +36,11 @@
         //     alert("정보 불일치");
         // }
 
+
         // 조건문 + ( AND + OR )논리 연산자
+        // 논리 연산자 or  :  || 사용 [enter key / backspace key 사이]
+
+
         let id = prompt("id 입력");
         let pw = prompt("pw 입력");
         if ((id === "jy" || id === "pyl") && pw == "1234") {
@@ -42,9 +49,6 @@
             alert("정보 불일치");
         }
     </script>
-
-    <script type="text/javascript" src="java.js"></script>
-
 </body>
 
 </html>
